medical dashboard template add

--- a/advanced-components.html
+++ b/advanced-components.html
@@ -272,6 +272,7 @@
 						<ul class="submenu">
 							<li><a href="index.html">Dashboard style 1</a></li>
 							<li><a href="index2.html">Dashboard style 2</a></li>
+							<li><a href="index3.html">Dashboard style 3</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
