--- a/advanced-components.html
+++ b/advanced-components.html
@@ -386,6 +386,7 @@
 							<li><a href="profile.html">Profile</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="pricing-table.html">Pricing Tables</a></li>
+							<li><a href="notes.html">Notes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
