--- a/product-detail.html
+++ b/product-detail.html
@@ -384,6 +384,7 @@
 							<li><a href="profile.html">Profile</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="pricing-table.html">Pricing Tables</a></li>
+							<li><a href="notes.html">Notes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
