--- a/sitemap.html
+++ b/sitemap.html
@@ -380,6 +380,7 @@
 							<li><a href="profile.html">Profile</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="pricing-table.html">Pricing Tables</a></li>
+							<li><a href="notes.html">Notes</a></li>
 						</ul>
 					</li>
 					<li class="dropdown">
@@ -581,6 +582,7 @@
 										<li><a href="profile.html">Profile</a></li>
 										<li><a href="gallery.html">Gallery</a></li>
 										<li><a href="pricing-table.html">Pricing Tables</a></li>
+										<li><a href="notes.html">Notes</a></li>
 									</ul>
 								</div>
 							</div>
