adsense script add

--- a/advanced-components.html
+++ b/advanced-components.html
@@ -67,6 +67,11 @@
 			async
 			src="https://www.googletagmanager.com/gtag/js?id=G-GBZ3SGGX85"
 		></script>
+		<script
+			async
+			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2973766580778258"
+			crossorigin="anonymous"
+		></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag() {
